logs/mobility/build.make.006.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void mobilityStateMachine(const ros::TimerEvent&)’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:261:24: error: no match for call to ‘(ros::Publisher) (std_msgs::String&)’
 stevenPublish(stevenMsg);
                        ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
